Dashboard Output Bug Fixes and Finalization.

--- a/Cashify/Components/Layout/BarChart.razor
+++ b/Cashify/Components/Layout/BarChart.razor
@@ -1,6 +1,7 @@
 ﻿@typeparam T
 
-<ApexChart TItem="T"
+<ApexChart @ref="_chart"
+           TItem="T"
            Options="Options"
            Height="@Height">
     <ApexPointSeries TItem="T"
