--- a/Cashify/Components/Layout/DonutChart.razor
+++ b/Cashify/Components/Layout/DonutChart.razor
@@ -1,7 +1,7 @@
 ﻿@typeparam T
 
 <div class="text-center">
-    <ApexChart TItem="T" Height="260" Options="BarChartOptions">
+    <ApexChart TItem="T" Height="260" Options="ChartOptions">
         <ApexPointSeries TItem="T"
                          Items="Items"
                          SeriesType="SeriesType.Donut"
