--- a/Cashify/Components/_Imports.razor
+++ b/Cashify/Components/_Imports.razor
@@ -39,8 +39,9 @@
 @using Cashify
 @using Cashify.Components
 @using Cashify.Components.Layout
-@using Cashify.Application.Interfaces.Services
+@using Cashify.Components.Pages.Debts
 @using Cashify.Application.Interfaces.Utility
+@using Cashify.Application.Interfaces.Services
 
 @using Cashify.Domain.Common.Enum
 @using Cashify.Application.DTOs.Tags
